Fixed unneccesarily large z-index value

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -209,7 +209,7 @@ input:focus {
     border-radius: 5px;
     padding: 0px 50px;
     margin: 0 10px 10px 0;
-    z-index: 1000; }
+    z-index: 10; }
 
 /* The Close Button */
 .close {
